# viznoir

./: .all-contributorsrc  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.cpu  README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.pt.md  README.zh.md  SECURITY.md  docker-compose.yml  poc_v040_industrial.py  poc_vtk_manim.py  pyproject.toml  server.json  smithery.yaml
.claude-plugin/skills/cae-postprocess/: SKILL.md
.claude-plugin/skills/cfd-workflow/: SKILL.md
.claude-plugin/skills/dev-pipeline/: SKILL.md
.claude-plugin/skills/fea-workflow/: SKILL.md
.claude-plugin/skills/oss-workflow/: SKILL.md
.claude-plugin/skills/sph-workflow/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/workflows/: auto-merge.yml  ci.yml  dependency-review.yml  deploy.yml  pr-quality.yml  publish.yml  release-drafter.yml  scorecard.yml  security.yml  stale.yml  welcome.yml
agents/: viz-agent.md  viz-orchestrator.md
benchmarks/: REPORT.md  bench_comparison.py  bench_execution.py  bench_render.py
commands/: viznoir.md
docs/: OSS_STRATEGY.md  awesome-mcp-servers-entry.md  cinematic-rendering-spec.md  showcase-gallery.md  user-scenarios-and-features.md
docs/launch/: hn-post.md  reddit-cfd.md  reddit-openfoam.md  registry-submissions.md
docs/plans/: 2026-03-07-redesign-readme-landing.md  2026-03-07-v040-implementation.md  2026-03-07-v050-implementation.md  2026-03-07-v050-science-storyteller-design.md  2026-03-07-viznoir-redesign-vtk-manim.md  2026-03-09-cae-postprocess-skill-design.md  2026-03-09-v060-design.md  2026-03-09-v060-implementation.md  2026-03-11-showcase-redesign-design.md  2026-03-12-roadmap.md
docs/superpowers/plans/: 2026-03-16-adaptive-render.md  2026-03-16-agent-harness.md  2026-03-25-me-autoresearch-harness.md
docs/superpowers/specs/: 2026-03-16-adaptive-render-design.md  2026-03-16-agent-harness-design.md
docs/tutorials/: country-examples.md  quickstart-cfd.md  quickstart-fea.md  quickstart-medical.md
docs/validation/: e2e-report.md  e2e-results.json  test_e2e.py
examples/: README.md  aerodynamics_workflow.json  structural_fea.json  thermal_analysis.json
examples/01-cfd-pressure/: README.md
examples/02-fea-displacement/: README.md
examples/03-thermal-analysis/: README.md
examples/04-medical-imaging/: README.md
examples/05-openfoam-cavity/: README.md
paper/: paper.md
scripts/: generate_showcase.py
src/parapilot/: config.py  server.py
src/parapilot/core/: compiler.py  registry.py  runner.py
src/parapilot/engine/: export.py  filters.py  overlay.py  physics.py  readers.py  renderer.py
src/parapilot/resources/: catalog.py
src/parapilot/tools/: preview3d.py
src/viznoir/: __init__.py  config.py  server.py
src/viznoir/anim/: __init__.py  compositor.py  easing.py  latex.py  timeline.py  transitions.py
src/viznoir/context/: __init__.py  cgns.py  dualsphysics.py  generic.py  models.py  openfoam.py  parser.py
src/viznoir/core/: compiler.py  compositor.py  profiles.py  runner.py  worker.py
src/viznoir/engine/: analysis.py  camera_auto.py  camera_path.py  export.py  filters.py  materials.py  overlay.py  physics.py  readers.py  renderer.py  renderer_cine.py  topology.py  transfer_functions.py
src/viznoir/harness/: __init__.py  domain_hints.py  evaluator.py  models.py  orchestrator.py  registry.py
src/viznoir/pipeline/: engine.py
src/viznoir/presets/: registry.py
src/viznoir/prompts/: guides.py
src/viznoir/resources/: catalog.py
src/viznoir/tools/: analyze.py  batch.py  compare.py  compose.py  inspect_physics.py  isosurface.py  split_animate.py  volume.py
tests/: conftest.py  test_examples_gallery.py  test_presets.py  test_prompts.py  test_property.py  test_resources.py
tests/fixtures/: create_data.py
tests/test_anim/: test_compositor.py  test_easing.py  test_latex.py  test_physics.py  test_timeline.py  test_transitions.py
tests/test_context/: test_cgns.py  test_dualsphysics.py  test_models.py  test_openfoam.py  test_parser.py
tests/test_core/: test_compiler.py  test_compositor.py  test_compositor_font.py  test_compositor_labels.py  test_compositor_layout.py  test_config.py  test_output.py  test_profiles.py  test_registry.py  test_runner.py  test_worker.py
tests/test_engine/: test_analysis.py  test_annotation.py  test_camera.py  test_camera_auto.py  test_colormaps.py  test_export.py  test_export_vtk.py  test_filters.py  test_filters_vtk.py  test_lighting.py  test_overlay.py  test_physics.py  test_postfx.py  test_readers.py  test_renderer.py  test_renderer_cine.py  test_renderer_cine_vtk.py  test_renderer_helpers.py  test_renderer_vtk.py  test_topology.py  test_transfer_functions.py
tests/test_harness/: test_domain_hints.py  test_evaluator.py  test_integration.py  test_models.py  test_orchestrator.py  test_tool_dispatch.py
tests/test_pipeline/: test_engine.py
tests/test_tools/: test_analyze_tool.py  test_cinematic_impl.py  test_compare.py  test_compare_impl.py  test_compose_tool.py  test_convenience.py  test_e2e_production.py  test_inspect_physics.py  test_mcp_compliance.py  test_mcp_integration.py  test_server.py  test_server_registration.py  test_server_tools.py  test_split_animate.py  test_story_prompt.py  test_storytelling_e2e.py  test_tool_impls.py  test_volume_tool.py
video/: .gitignore
video/parapilot-intro/: README.md  package-lock.json  package.json
video/parapilot-intro/src/: ParapilotIntro.tsx  Root.tsx
video/viznoir-intro/: README.md  package-lock.json  package.json  tsconfig.json
video/viznoir-intro/src/: ParapilotIntro.tsx  Root.tsx  styles.ts
www/: astro.config.mjs  package-lock.json  package.json
www/public/: llms.txt  robots.txt  sitemap.xml  viewer.html
www/public/showcase/: ct_skull_orbit_hd.webm  dragon_orbit_hd.webm
www/src/components/: Comparison.astro  FAQ.astro  Features.astro  Footer.astro  Hero.astro  Proof.astro  QuickStart.astro  Showcase.astro  Stats.astro  UseCases.astro
www/src/layouts/: Layout.astro
www/src/pages/: index.astro
www/src/styles/: global.css
(+12 files in other folders)
