[project]
name = "mcp-server-parapilot"
version = "0.1.0"
description = "Headless VTK/ParaView post-processing MCP server for CFD/CAE simulations"
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Imgyu Kim", email = "kimimgo@gmail.com" }
]
keywords = ["mcp", "vtk", "paraview", "cfd", "cae", "post-processing", "simulation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Visualization",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0",
    "vtk>=9.4",
    "numpy>=1.24",
]

[project.optional-dependencies]
mesh = ["meshio>=5.0", "trimesh>=4.0"]
composite = ["pillow>=10.0", "matplotlib>=3.8"]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
]
all = ["mcp-server-parapilot[mesh,composite]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "numpy>=2.2.6",
    "pillow>=12.1.1",
    "matplotlib>=3.8",
]

[project.scripts]
mcp-server-parapilot = "parapilot.server:main"

[project.urls]
Homepage = "https://kimimgo.github.io/parapilot"
Repository = "https://github.com/kimimgo/parapilot"
Documentation = "https://kimimgo.github.io/parapilot/docs/"
Issues = "https://github.com/kimimgo/parapilot/issues"
Changelog = "https://github.com/kimimgo/parapilot/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/parapilot"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["N802"]

[tool.ruff.lint.per-file-ignores]
"tests/fixtures/*" = ["F403", "F405"]

[tool.mypy]
python_version = "3.10"
strict = true
disallow_any_generics = false
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
