[project]
name = "mcp-server-viznoir"
version = "0.6.0"
description = "VTK is all you need. Cinema-quality science visualization for AI agents."
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Imgyu Kim", email = "kimimgo@gmail.com" }
]
keywords = ["mcp", "vtk", "paraview", "cfd", "cae", "post-processing", "simulation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Visualization",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0",
    "vtk>=9.4",
    "numpy>=1.24",
]

[project.optional-dependencies]
mesh = ["meshio>=5.0", "trimesh>=4.0"]
composite = ["pillow>=10.0", "matplotlib>=3.8"]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
]
tasks = ["fastmcp[tasks]>=3.0.0"]
all = ["mcp-server-viznoir[mesh,composite,tasks]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "hypothesis>=6.100",
    "ruff>=0.8",
    "mypy>=1.13",
    "numpy>=2.2.6",
    "pillow>=12.1.1",
    "matplotlib>=3.8",
]

[project.scripts]
mcp-server-viznoir = "viznoir.server:main"

[project.urls]
Homepage = "https://kimimgo.github.io/viznoir"
Repository = "https://github.com/kimimgo/viznoir"
Documentation = "https://kimimgo.github.io/viznoir/docs/"
Issues = "https://github.com/kimimgo/viznoir/issues"
Changelog = "https://github.com/kimimgo/viznoir/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/viznoir"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/www",
    "/video",
    "/docs",
    "/paper",
    "/scripts",
    "/benchmarks",
    "/assets",
    "/.github",
    "/.claude*",
    "/.pre-commit*",
    "/.allcontributorsrc",
    "/codecov.yml",
    "/smithery.yaml",
    "/Dockerfile*",
    "/docker-compose*",
    "*.gif",
    "*.mp4",
    "*.webp",
    "*.webm",
    "*.png",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["N802"]

[tool.ruff.lint.per-file-ignores]
"tests/fixtures/*" = ["F403", "F405"]

[tool.mypy]
python_version = "3.10"
strict = true
disallow_any_generics = false
warn_unused_ignores = false

[tool.mutmut]
paths_to_mutate = "src/viznoir/config.py"
tests_dir = "tests/"
runner = "python -m pytest tests/test_core/test_config.py tests/test_property.py -x -q --tb=no"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
